airflow/logs/user_processing_v2/store_data/2021-06-30T14:29:12.044488+00:00/9.log
[2021-07-01 08:44:56,988] {taskinstance.py:876} INFO - Dependencies all met for <TaskInstance: user_processing_v2.store_data 2021-06-30T14:29:12.044488+00:00 [queued]>
[2021-07-01 08:44:57,018] {taskinstance.py:876} INFO - Dependencies all met for <TaskInstance: user_processing_v2.store_data 2021-06-30T14:29:12.044488+00:00 [queued]>
[2021-07-01 08:44:57,020] {taskinstance.py:1067} INFO - 
--------------------------------------------------------------------------------
[2021-07-01 08:44:57,021] {taskinstance.py:1068} INFO - Starting attempt 9 of 9
[2021-07-01 08:44:57,022] {taskinstance.py:1069} INFO - 
--------------------------------------------------------------------------------
[2021-07-01 08:44:57,041] {taskinstance.py:1087} INFO - Executing <Task(PythonOperator): store_data> on 2021-06-30T14:29:12.044488+00:00
[2021-07-01 08:44:57,048] {standard_task_runner.py:52} INFO - Started process 7186 to run task
[2021-07-01 08:44:57,070] {standard_task_runner.py:76} INFO - Running: ['airflow', 'tasks', 'run', 'user_processing_v2', 'store_data', '2021-06-30T14:29:12.044488+00:00', '--job-id', '920', '--pool', 'default_pool', '--raw', '--subdir', 'DAGS_FOLDER/user_processing_v2.py', '--cfg-path', '/tmp/tmp9v_iuwj5', '--error-file', '/tmp/tmpkiot9b3b']
[2021-07-01 08:44:57,072] {standard_task_runner.py:77} INFO - Job 920: Subtask store_data
[2021-07-01 08:44:57,199] {logging_mixin.py:104} INFO - Running <TaskInstance: user_processing_v2.store_data 2021-06-30T14:29:12.044488+00:00 [running]> on host airflowvm
[2021-07-01 08:44:57,372] {taskinstance.py:1280} INFO - Exporting the following env vars:
AIRFLOW_CTX_DAG_OWNER=airflow
AIRFLOW_CTX_DAG_ID=user_processing_v2
AIRFLOW_CTX_TASK_ID=store_data
AIRFLOW_CTX_EXECUTION_DATE=2021-06-30T14:29:12.044488+00:00
AIRFLOW_CTX_DAG_RUN_ID=manual__2021-06-30T14:29:12.044488+00:00
[2021-07-01 08:44:57,407] {logging_mixin.py:104} INFO - Processing user {'first_name': {'0': 'Madison'}, 'last_name': {'0': 'King'}, 'country': {'0': 'New Zealand'}, 'username': {'0': 'greentiger528'}, 'password': {'0': 'avalon'}, 'email': {'0': 'madison.king@example.com'}}
[2021-07-01 08:44:57,457] {base.py:69} INFO - Using connection to: id: ***_default. Host: localhost, Port: 5432, Schema: , Login: ***, Password: ***, extra: {'cursor': 'realdictcursor'}
[2021-07-01 08:44:57,494] {taskinstance.py:1481} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/sandbox/lib/python3.8/site-packages/airflow/models/taskinstance.py", line 1137, in _run_raw_task
    self._prepare_and_execute_task_with_callbacks(context, task)
  File "/home/airflow/sandbox/lib/python3.8/site-packages/airflow/models/taskinstance.py", line 1311, in _prepare_and_execute_task_with_callbacks
    result = self._execute_task(context, task_copy)
  File "/home/airflow/sandbox/lib/python3.8/site-packages/airflow/models/taskinstance.py", line 1341, in _execute_task
    result = task_copy.execute(context=context)
  File "/home/airflow/sandbox/lib/python3.8/site-packages/airflow/operators/python.py", line 150, in execute
    return_value = self.execute_callable()
  File "/home/airflow/sandbox/lib/python3.8/site-packages/airflow/operators/python.py", line 161, in execute_callable
    return self.python_callable(*self.op_args, **self.op_kwargs)
  File "/home/airflow/airflow/dags/user_processing_v2.py", line 50, in _storing
    cur.execute(copy_sql, (processing_user['first_name'], processing_user['last_name'],
  File "/home/airflow/sandbox/lib/python3.8/site-packages/psycopg2/extras.py", line 236, in execute
    return super().execute(query, vars)
psycopg2.errors.SyntaxError: syntax error at or near ","
LINE 1: INSERT INTO users VALUES (?, ?, ?, ?, ?, ?);
                                   ^

[2021-07-01 08:44:57,504] {taskinstance.py:1524} INFO - Marking task as FAILED. dag_id=user_processing_v2, task_id=store_data, execution_date=20210630T142912, start_date=20210701T084456, end_date=20210701T084457
[2021-07-01 08:44:57,609] {local_task_job.py:151} INFO - Task exited with return code 1
